test/development/acceptance-app/__snapshots__/ReactRefreshLogBox-scss.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactRefreshLogBox app scss syntax errors 1`] = `
"./index.module.scss
SassError: Expected expression.
  ╷
1 │ .button { font-size: :5px; }
  │                      ^
  ╵
  index.module.scss 1:22  root stylesheet

Import trace for requested module:
./index.module.scss
./index.js
./app/page.js"
`;

exports[`ReactRefreshLogBox app scss syntax errors 2`] = `
"./index.module.scss:1:1
Syntax error: Selector \\"button\\" is not pure (pure selectors must contain at least one local class or id)

> 1 | button { font-size: 5px; }
    |                                                                  ^"
`;
